--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cors": "^2.8.5",
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
+    "github-profile-card": "^3.1.0",
     "ng2-charts": "^2.4.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
