--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ngx-toastr": "^13.2.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.2",
+    "quill": "^1.3.7",
     "rxjs": "^6.6.6",
     "simple-line-icons": "^2.5.5",
     "ts-helpers": "^1.1.2",
