--- a/angular.json
+++ b/angular.json
@@ -28,14 +28,16 @@
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/primeicons/primeicons.css",
               "primeng/resources/themes/arya-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.snow.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
                 "./node_modules"
               ]
             },
-            "scripts": [],
+            "scripts": ["node_modules/quill/dist/quill.js"], 
             "allowedCommonJsDependencies": [
               "chart.js",
               "classnames"
