--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "newsapi": "^2.4.1",
     "nodemon": "^2.0.4",
     "req-flash": "0.0.3",
     "request": "^2.88.2",
