--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
+    "angular-github-contributions": "0.0.8",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "classlist.js": "^1.1.20150312",
@@ -51,12 +52,15 @@
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
     "github-profile-card": "^3.1.0",
+    "jquery": "^3.6.0",
     "ng2-charts": "^2.4.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-toastr": "^13.2.1",
+    "pm-sticky-notes": "^1.2.4",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.2",
+    "quill": "^1.3.7",
     "rxjs": "^6.6.6",
     "simple-line-icons": "^2.5.5",
     "ts-helpers": "^1.1.2",
