--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "mysql": "^2.18.1",
     "newsapi": "^2.4.1",
     "nodemon": "^2.0.4",
+    "python-shell": "^3.0.0",
     "req-flash": "0.0.3",
     "request": "^2.88.2",
     "verify-certification": "^1.0.0"
